# Cisco-Nexus-Dashboard-MCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/ndfc_mcp/: ndfc_client.py  server.py  settings.py  types.py
src/ndfc_mcp/ndfc/schemas/: common.py  execution.py  fabrics.py  interfaces.py  networks.py  switches.py  troubleshooting.py  vrfs.py
src/ndfc_mcp/tools/: connection.py  dependencies.py  execution.py  fabrics.py  interfaces.py  networks.py  switches.py  troubleshooting.py  vrfs.py
